Improve some tests.